--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  go_router: ^13.1.0
   provider: ^6.1.1
 
 dev_dependencies:
